<?xml version="1.0"?>
<package>
  <name>bee_viz</name>
  <version>0.0.0</version>
  <description>The rviz_visualizer package</description>

  <author>Abhishek Cauligi</author>
  <maintainer email="acauligi@stanford.edu">acauligi</maintainer>
  <license>Stanford</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>eigen3</run_depend>

  <export>

  </export>
</package>
